<resources>
    <string name="app_name">TestAppFinal</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">loading…</string>
    <string name="notification">Notification</string>
    <string name="contact_us">Contact us</string>
    <string name="setting">Setting</string>
    <string name="share_the_app">Share the app</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="private_policy">Private policy</string>
    <string name="search">Search</string>
    <string name="product_name">product name</string>
    <string name="product_price">product price</string>
    <string name="product_weight">product weight</string>
    <string name="add">add</string>
    <string name="name_of_product">Name of product</string>
    <string name="price_of_product">Price of product</string>
    <string name="weight_of_product">Weight of product</string>
    <string name="send">Send</string>
    <string name="type_here">Type here...</string>
    <string name="name">Name</string>
    <string name="email">Email</string>


</resources>
