<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_notification"
        android:orderInCategory="100"
        android:title="@string/notification"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_contacts"
        android:orderInCategory="100"
        android:title="@string/contact_us"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_setting"
        android:orderInCategory="100"
        android:title="@string/setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_share"
        android:orderInCategory="100"
        android:title="@string/share_the_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_terms"
        android:orderInCategory="100"
        android:title="@string/terms_and_conditions"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_private_policy"
        android:orderInCategory="100"
        android:title="@string/private_policy"
        app:showAsAction="never" />
</menu>